kubernetes/core/networking/nginx-ext-ingress/services/plex/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app plex
  namespace: networking
spec:
  ingressClassName: "nginx"
  rules:
    - host: &host plex.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 32400
  tls:
    - hosts:
        - *host
